--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,13 @@
-{{header-global}}
+<div class="home-hero">
+  {{header-global}}
+  <div class="container home-hero-content">
+    <div class="col-md-7 home-intro">
+      <h1 class="site-title">We help startups launch beautiful, functional MVPs in minimum time</h1>
+      <h2 class="site-tagline">Expert MVP development so you can quickly attract customers and get investors on board</h2>
+      <button class="btn">Let’s Get in Touch</button>
+    </div>
+    <div class="col-md-5 home-rocket">
+      <img src="/images/home-rocket.svg" class="home-rocket-img" alt="JavaScript development company" />
+    </div>
+  </div>
+</div>
