--- a/app/templates/components/header-global.hbs
+++ b/app/templates/components/header-global.hbs
@@ -1,12 +1,14 @@
-<header class="home-header">
+<header class="header">
   <div class="container">
     <div class="col-md-2 logo">
       <img src="/images/logo.svg" alt="logo" />
     </div>
-    <div class="col-md-5 float-md-right navigation">
+    <div class="col-md-5 float-md-right navigation text-md-right">
       {{#link-to "about"}}About{{/link-to}}
+      {{#link-to "about"}}Services{{/link-to}}
+      {{#link-to "about"}}Clients{{/link-to}}
+      {{#link-to "about"}}Conact{{/link-to}}
     </div>
   </div>
-  Global header
 </header>
 {{yield}}
