home CTA and home footer

--- a/app/templates/components/header-global.hbs
+++ b/app/templates/components/header-global.hbs
@@ -3,11 +3,12 @@
     <div class="col-md-2 logo">
       <img src="/images/logo.svg" alt="logo" />
     </div>
-    <div class="col-md-5 float-md-right navigation text-md-right">
+    <div class="col-md-6 float-md-right navigation text-md-right">
       {{#link-to "about"}}About{{/link-to}}
       {{#link-to "about"}}Services{{/link-to}}
       {{#link-to "about"}}Clients{{/link-to}}
-      {{#link-to "about"}}Conact{{/link-to}}
+      <a href="https://medium.com/ecmastack">Blog</a>
+      {{#link-to "about"}}Contact{{/link-to}}
     </div>
   </div>
 </header>
