--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -74,14 +74,82 @@
   .service-icon {
     margin: 0 auto 30px;
     display: block;
+    height: 80px;
   }
 
   .service-name {
     margin-bottom: 25px;
     font-size: 24px;
+    text-align: center;
   }
 
   .service-description {
     font-size: 18px;
+  }
+}
+
+.home-cta {
+  background: #F5FAFF;
+  padding: 100px 0;
+  text-align: center;
+  color: #0088FF;
+
+  .home-cta-title {
+    font-size: 125px;
+    opacity: 0.1;
+    margin: 0 0 -50px 0;
+  }
+
+  .home-cta-subtitle {
+    font-size: 30px;
+    max-width: 500px;
+    margin: 0 auto 50px;
+    line-height: 1.3;
+  }
+
+  .btn {
+    padding: 24px 35px;
+    font-size: 21px;
+    box-shadow: 2px 4px 27px -7px #333;
+    &:hover {
+      box-shadow: none;
+    }
+  }
+}
+
+
+.footer-home {
+  height: 728px;
+  position: relative;
+  background: #212a3d;
+  background: -moz-linear-gradient(-45deg,  #212a3d 0%, #1c89ff 100%);
+  background: -webkit-linear-gradient(-45deg,  #212a3d 0%,#1c89ff 100%);
+  background: linear-gradient(135deg,  #212a3d 0%,#1c89ff 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#212a3d', endColorstr='#1c89ff',GradientType=1 );
+  text-align: center;
+  padding: 100px 0;
+
+  &:after {
+    position: absolute;
+    bottom: 0;
+    content: "";
+    width: 100%;
+    height: 531px;
+    background-image: url('/images/nyc-skyline.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.8;
+    left: 0;
+  }
+
+  .footer-heading {
+    font-size: 30px;
+    font-weight: 500;
+    color: #fff;
+  }
+
+  .footer-heading-2 {
+    font-size: 24px;
+    color: #9BA9BF;
   }
 }
