--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -15,4 +15,14 @@
 {{home-our-process}}
 {{home-services}}
 
+<div class="home-cta">
+  <h1 class="home-cta-title">Your turn</h1>
+  <h2 class="home-cta-subtitle">Get fast &amp; robust solutions for your next project with ECMAStack.</h2>
+  <button class="btn">Let’s Get in Touch</button>
+</div>
+
+<div class="footer-home">
+  <h1 class="footer-heading">We are based in the NYC metro area</h1>
+  <h2 class="footer-heading-2">and available for face to face meetings in the city or in CT.</h2>
+</div>
 {{footer-global}}
