--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -15,14 +15,31 @@
 {{home-our-process}}
 {{home-services}}
 
-<div class="home-cta">
+<section class="home-cta">
   <h1 class="home-cta-title">Your turn</h1>
   <h2 class="home-cta-subtitle">Get fast &amp; robust solutions for your next project with ECMAStack.</h2>
   <button class="btn">Let’s Get in Touch</button>
-</div>
+</section>
 
-<div class="footer-home">
+<section class="home-clients">
+  <div class="container">
+    <img class="client-logo" src="/images/bizlybw.svg" alt="Bizly" />
+    <img class="client-logo" src="images/sloohbw.svg" alt="Slooh" />
+    <img class="client-logo" src="images/giffybw.svg" alt="GiftFly" />
+    <img class="client-logo" src="images/classmatebw.svg" alt="classmate" />
+    <img class="client-logo" src="images/minellibw.svg" alt="minelli" />
+  </div>
+</section>
+
+<section class="home-mvp">
+  <div class="container">
+    <h1 class="home-mvp-title">At ECMA Stack, we are experts in building <em>MVPs</em> that are <em>fast, beautiful, and efficient.</em></h1>
+    <h2 class="home-mvp-subtitle">Are we the right partner for you? Get in touch and let’s find out.</h2>
+  </div>
+</section>
+
+<section class="footer-home">
   <h1 class="footer-heading">We are based in the NYC metro area</h1>
   <h2 class="footer-heading-2">and available for face to face meetings in the city or in CT.</h2>
-</div>
+</section>
 {{footer-global}}
