--- a/app/templates/components/header-global.hbs
+++ b/app/templates/components/header-global.hbs
@@ -3,7 +3,7 @@
     <div class="col-md-2 logo">
       <img src="/images/logo.svg" alt="logo" />
     </div>
-    <div class="col-md-6 float-md-right navigation text-md-right">
+    <div class="col-md-6 float-md-right navigation text-md-right col-sm-12">
       {{#link-to "about"}}About{{/link-to}}
       {{#link-to "about"}}Services{{/link-to}}
       {{#link-to "about"}}Clients{{/link-to}}
