--- a/app/templates/components/home-our-process.hbs
+++ b/app/templates/components/home-our-process.hbs
@@ -6,13 +6,13 @@
       <h3 class="block-title">Collaborative Planning</h3>
       <p class="block-description">We use our experience building MVPs to help you define your idea in a way that we can turn into a real, professional-grade website or mobile app.</p>
     </div>
-    <div class="col-md-5">
+    <div class="col-md-5 hidden-xs-down">
       <img src="/images/collaborative-icon.svg" alt="Collaborative Planning" />
     </div>
   </article>
 
   <article class="process-block left-bubble row">
-    <div class="col-md-5">
+    <div class="col-md-5 hidden-xs-down">
       <img src="/images/management-icon.svg" alt="Collaborative Planning" />
     </div>
     <div class="col-md-7">
@@ -26,7 +26,7 @@
       <h3 class="block-title">Guaranteed Quality</h3>
       <p class="block-description">We practice agile development -- frequent iterations that incorporate your feedback and guarantee the project is on track to match exactly what you have in mind.</p>
     </div>
-    <div class="col-md-5">
+    <div class="col-md-5 hidden-xs-down">
       <img src="/images/quality-icon.svg" alt="Collaborative Planning" />
     </div>
   </article>
