--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,12 +1,12 @@
 <div class="home-hero">
   {{header-global}}
   <div class="container home-hero-content">
-    <div class="col-md-7 home-intro">
+    <div class="col-md-7 home-intro col-sm-12">
       <h1 class="site-title">We help startups launch beautiful, functional MVPs in minimum time</h1>
       <h2 class="site-tagline">Expert MVP development so you can quickly attract customers and get investors on board</h2>
       <button class="btn">Let’s Get in Touch</button>
     </div>
-    <div class="col-md-5 home-rocket">
+    <div class="col-md-5 home-rocket hidden-sm-down">
       <img src="/images/home-rocket.svg" class="home-rocket-img" alt="JavaScript development company" />
     </div>
   </div>
@@ -23,7 +23,7 @@
 
 <section class="home-clients">
   <div class="container">
-    <img class="client-logo" src="/images/bizlybw.svg" alt="Bizly" />
+    <img class="client-logo" src="images/bizlybw.svg" alt="Bizly" />
     <img class="client-logo" src="images/sloohbw.svg" alt="Slooh" />
     <img class="client-logo" src="images/giffybw.svg" alt="GiftFly" />
     <img class="client-logo" src="images/classmatebw.svg" alt="classmate" />
@@ -35,6 +35,11 @@
   <div class="container">
     <h1 class="home-mvp-title">At ECMA Stack, we are experts in building <em>MVPs</em> that are <em>fast, beautiful, and efficient.</em></h1>
     <h2 class="home-mvp-subtitle">Are we the right partner for you? Get in touch and let’s find out.</h2>
+
+    <div class="email-us col-md-6 col-xs-12">
+      <span class="title">Write us</span>
+      <a class="email-cta text-xs-left" href="mailto:hello@ecmastack.com">hello@ecmastack.com</a>
+    </div>
   </div>
 </section>
 
