--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -7,13 +7,14 @@
       <button class="btn">Let’s Get in Touch</button>
     </div>
     <div class="col-md-5 home-rocket hidden-sm-down">
-      <img src="/images/home-rocket.svg" class="home-rocket-img" alt="JavaScript development company" />
+      <img src="/images/home-rocket.png" width="35%" class="home-rocket-img" alt="JavaScript development company" />
     </div>
   </div>
 </div>
 
 {{home-our-process}}
 {{home-services}}
+{{home-projects}}
 
 <section class="home-cta">
   <h1 class="home-cta-title">Your turn</h1>
