--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -1,10 +1,6 @@
 .home-hero {
-  background: #212a3d;
-  background: -moz-linear-gradient(-45deg, #212a3d 0%, #273555 44%, #1c89ff 100%);
-  background: -webkit-linear-gradient(-45deg, #212a3d 0%,#273555 44%,#1c89ff 100%);
-  background: linear-gradient(135deg, #212a3d 0%,#273555 44%,#1c89ff 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#212a3d', endColorstr='#1c89ff',GradientType=1 );
-  height: 700px;
+  height: 550px;
+  margin-top: 100px;
 
   .home-intro {
     margin-top: 90px;
