--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,6 +4,7 @@ $enable-flex: true;
 $grey: #9BA9BF;
 $blue: #0088FF;
 $black: #1F2A3E;
+$pink: #E22A70;
 
 // Predefined Break-points
 $large: 1260px;
