--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -229,25 +229,14 @@
   height: 728px;
   position: relative;
   background: #212a3d;
-  background: -moz-linear-gradient(-45deg,  #212a3d 0%, #1c89ff 100%);
-  background: -webkit-linear-gradient(-45deg,  #212a3d 0%,#1c89ff 100%);
-  background: linear-gradient(135deg,  #212a3d 0%,#1c89ff 100%);
+  background-image: url("/images/nyc-skyline.svg"), -moz-linear-gradient(-45deg,  #212a3d 0%, #1c89ff 100%);
+  background-image: url("/images/nyc-skyline.svg"), -webkit-linear-gradient(-45deg,  #212a3d 0%,#1c89ff 100%);
+  background-image: url("/images/nyc-skyline.svg"), linear-gradient(135deg,  #212a3d 0%,#1c89ff 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#212a3d', endColorstr='#1c89ff',GradientType=1 );
   text-align: center;
   padding: 100px 0;
-
-  &:after {
-    position: absolute;
-    bottom: 0;
-    content: "";
-    width: 100%;
-    height: 531px;
-    background-image: url('/images/nyc-skyline.svg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    opacity: 0.8;
-    left: 0;
-  }
+  background-repeat: no-repeat;
+  background-position: bottom;
 
   .footer-heading {
     font-size: 30px;
@@ -259,4 +248,28 @@
     font-size: 24px;
     color: #9BA9BF;
   }
-}
+
+  .footer-home-callto-action {
+    color: #fff;
+    text-align: left;
+    margin-top: 100px;
+
+    .bottom-cta-title {
+      font-weight: normal;
+      line-height: 1.3;
+      em {
+        font-style: normal;
+        color: $pink;
+      }
+    }
+
+    .bottom-cta-paragraph {
+      font-size: 16px;
+      line-height: 1.7;
+    }
+
+    .btn {
+      padding: 10px 25px;
+    }
+  }
+} // end footer-home
