--- a/app/templates/components/header-global.hbs
+++ b/app/templates/components/header-global.hbs
@@ -8,7 +8,7 @@
       {{#link-to "about"}}Services{{/link-to}}
       {{#link-to "about"}}Clients{{/link-to}}
       <a href="https://medium.com/ecmastack">Blog</a>
-      {{#link-to "about"}}Contact{{/link-to}}
+      {{#link-to "contact"}}Contact{{/link-to}}
     </div>
   </div>
 
