--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,6 +1,31 @@
-<h2>Contact form</h2>
-<form>
-  <input>
-</form>
+<div class="page-contact-container">
+  <div class="container">
+  <h2 class="page-title">Fill in the form below and let’s chat</h2>
 
+  <form id="contact-form" class="col-md-8 col-sm-12 offset-md-2">
+    <div class="row">
+      <div class="col-md-6 form-group">
+        <input class="form-control" aria-describedby="nameHelp" placeholder="Name: John Doe">
+      </div>
+      <div class="col-md-6 form-group">
+        <input class="form-control" type="email" aria-describedby="emailHelp" placeholder="Email: example@domain.com">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <input class="form-control" aria-describedby="nameHelp" placeholder="Company: Google">
+    </div>
+
+    <div class="form-group">
+      <input class="form-control" aria-describedby="nameHelp" placeholder="Phone: (212) 545-1201">
+    </div>
+
+    <div class="form-group">
+      <textarea class="form-control" placeholder="Message..."></textarea>
+    </div>
+
+    <button type="submit" class="btn">Let's get in touch</button>
+  </form>
+  </div>
 {{outlet}}
+</div>
