--- a/app/templates/components/header-global.hbs
+++ b/app/templates/components/header-global.hbs
@@ -21,6 +21,12 @@
           <button class="btn">Let’s Get in Touch</button>
         </div>
         <div class="col-md-5 home-rocket hidden-sm-down">
+          <img src="/images/react-icon.svg" width="31" class="lib-icons react-icon" />
+          <img src="/images/angular-icon.svg" width="30" class="lib-icons angular-icon" />
+          <img src="/images/js-icon.svg" width="31" class="lib-icons js-icon" />
+          <img src="/images/node-icon.png" width="39" class="lib-icons node-icon" />
+          <img src="/images/redux-icon.png" width="32" class="lib-icons redux-icon" />
+          <img src="/images/graphql-icon.svg" width="30" class="lib-icons graphql-icon" />
           <img src="/images/home-rocket.png" width="35%" class="home-rocket-img" alt="JavaScript development company" />
         </div>
       </div>
