--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -5,23 +5,23 @@
   <form id="contact-form" class="col-md-8 col-sm-12 offset-md-2">
     <div class="row">
       <div class="col-md-6 form-group">
-        {{input value=name class="form-control" aria-describedby="nameHelp" placeholder="Name: John Doe"}}
+        {{input value=name class="form-control" aria-describedby="nameHelp" placeholder="Name: John Doe" name="name"}}
       </div>
       <div class="col-md-6 form-group">
-        {{input value=email class="form-control" type="email" aria-describedby="emailHelp" placeholder="Email: example@domain.com"}}
+        {{input value=email class="form-control" type="email" aria-describedby="emailHelp" placeholder="Email: example@domain.com" name="email"}}
       </div>
     </div>
 
     <div class="form-group">
-      {{input value=company class="form-control" aria-describedby="nameHelp" placeholder="Company: Google"}}
+      {{input value=company class="form-control" aria-describedby="nameHelp" placeholder="Company: Google" name="company"}}
     </div>
 
     <div class="form-group">
-      {{input value=phone class="form-control" aria-describedby="nameHelp" placeholder="Phone: (212) 545-1201"}}
+      {{input value=phone class="form-control" aria-describedby="nameHelp" placeholder="Phone: (212) 545-1201" name="phone"}}
     </div>
 
     <div class="form-group">
-      {{textarea value=message class="form-control" placeholder="Message..."}}
+      {{textarea value=message class="form-control" placeholder="Message..." name="message"}}
     </div>
 
     <button type=submit {{action "sendContact"}} class="btn">Let's get in touch</button>
