--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-{{header-global homeHeader=homeHeader}}
+{{header-global homeHeader=homeHeader currentRoute=currentRoute}}
 {{currentRoute}}
 <div class="page">{{outlet}}</div>
 {{footer-global}}
