--- a/app/templates/components/header-global.hbs
+++ b/app/templates/components/header-global.hbs
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header {{energy}}">
   <div class="container">
     <div class="col-md-2 logo">
       {{#link-to "index"}}<img src="/images/logo.svg" alt="logo" />{{/link-to}}
