--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -11,8 +11,10 @@
   height: 800px;
 }
 
-.energy {
+.services-page-header.header,
+.services-page .home-hero {
   background: #e22a70;
+  margin-top: 0;
 }
 
 .navigation a {
