--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-{{header-global homeHeader=homeHeader currentRoute=currentRoute}}
+{{header-global homeHeader=homeHeader route=route}}
 {{currentRoute}}
-<div class="page">{{outlet}}</div>
+<div class="page {{route}}-page">{{outlet}}</div>
 {{footer-global}}
