--- a/app/templates/components/header-global.hbs
+++ b/app/templates/components/header-global.hbs
@@ -1,11 +1,11 @@
-<header class="header {{energy}}">
+<header class="header {{route}}-page-header">
   <div class="container">
     <div class="col-md-2 logo">
       {{#link-to "index"}}<img src="/images/logo.svg" alt="logo" />{{/link-to}}
     </div>
     <div class="col-md-6 float-md-right navigation text-md-right col-sm-12">
       {{#link-to "about"}}About{{/link-to}}
-      {{#link-to "about"}}Services{{/link-to}}
+      {{#link-to "services"}}Services{{/link-to}}
       {{#link-to "about"}}Clients{{/link-to}}
       <a href="https://medium.com/ecmastack">Blog</a>
       {{#link-to "contact"}}Contact{{/link-to}}
