--- a/app/templates/services.hbs
+++ b/app/templates/services.hbs
@@ -1,9 +1,8 @@
 <div class="home-hero services-hero">
   <div class="container home-hero-content">
     <div class="col-md-7 home-intro col-sm-12">
-      <h1 class="site-title">We help startups launch beautiful, functional MVPs in minimum time</h1>
-      <h2 class="site-tagline">Expert MVP development so you can quickly attract customers and get investors on board</h2>
-      <button class="btn">Let’s Get in Touch</button>
+      <h1 class="site-title">Building apps, it’s what we do</h1>
+      <h2 class="site-tagline">We use the latest in technology trends and language to build wicked fast, responsive and unique applications.</h2>
     </div>
     <div class="col-md-5 home-rocket hidden-sm-down">
       <img src="/images/react-icon.svg" width="31" class="lib-icons react-icon" />
@@ -16,4 +15,84 @@
     </div>
   </div>
 </div>
+
+<section class="home-section container home-our-process">
+  <h2 class="section-title text-md-center">Software and App Development Services</h2>
+
+  <article class="process-block right-bubble row">
+    <div class="col-md-7">
+      <h3 class="block-title">Software Engineering</h3>
+      <p class="block-description">
+        We work with the best and most creative engineers available in the market.  We build software through the encouragement of excellent developer culture.
+      </p>
+    </div>
+    <div class="col-md-5 hidden-xs-down">
+      <img src="/images/collaborative-icon.svg" alt="Collaborative Planning" />
+    </div>
+  </article>
+
+  <article class="process-block left-bubble row">
+    <div class="col-md-5 hidden-xs-down">
+      <img src="/images/management-icon.svg" alt="Collaborative Planning" />
+    </div>
+    <div class="col-md-7">
+      <h3 class="block-title">Front End Development</h3>
+      <p class="block-description">
+        The uniqueness of our business is how we build fast and beautiful interfaces for people to use.  The front end is the face of your business, it should be done well.
+      </p>
+    </div>
+  </article>
+
+  <article class="process-block right-bubble row">
+    <div class="col-md-7">
+      <h3 class="block-title">API Development</h3>
+      <p class="block-description">
+        Our API’s and services focus on gathering data and presenting it for a host of clients to use their application tier.  We leverage technologies like Node.js and GraphQL to achieve excellent orchestration between client and server.
+      </p>
+    </div>
+    <div class="col-md-5 hidden-xs-down">
+      <img src="/images/quality-icon.svg" alt="Collaborative Planning" />
+    </div>
+  </article>
+
+  <article class="process-block left-bubble row">
+    <div class="col-md-5 hidden-xs-down">
+      <img src="/images/management-icon.svg" alt="Collaborative Planning" />
+    </div>
+    <div class="col-md-7">
+      <h3 class="block-title">Training</h3>
+      <p class="block-description">
+        Fast track your development team into modern technologies like React / Redux and Node.js through one of our training programs.  Contact us to learn more about what we have available.
+      </p>
+    </div>
+  </article>
+
+  <article class="process-block right-bubble row">
+    <div class="col-md-7">
+      <h3 class="block-title">User Experience Engineering</h3>
+      <p class="block-description">
+        Work with our professional network of user experience engineers.  Our team is top notch in understanding the users needs in human computer interaction.  We focus on making your software super easy to use.
+      </p>
+    </div>
+    <div class="col-md-5 hidden-xs-down">
+      <img src="/images/quality-icon.svg" alt="Collaborative Planning" />
+    </div>
+  </article>
+
+  <article class="process-block left-bubble row">
+    <div class="col-md-5 hidden-xs-down">
+      <img src="/images/management-icon.svg" alt="Collaborative Planning" />
+    </div>
+    <div class="col-md-7">
+      <h3 class="block-title">Brand Development</h3>
+      <p class="block-description">
+        We are experts in brand development.  Logo, color scheme, brand style guides are all a part of how we create a rich and meaningful brand.
+      </p>
+    </div>
+  </article>
+
+</section>
+{{yield}}
+
+
 {{outlet}}
