--- a/app/templates/components/footer-global.hbs
+++ b/app/templates/components/footer-global.hbs
@@ -1,3 +1,23 @@
+<section class="footer-home">
+  <div class="hgroup">
+    <h1 class="footer-heading">We are based in the NYC metro area</h1>
+    <h2 class="footer-heading-2">and available for face to face meetings in the city or in CT.</h2>
+  </div>
+
+  <div class="footer-home-callto-action container">
+    <div class="col-md-6">
+      <h1 class="bottom-cta-title">
+        Let's Make Something<br>
+        <em>Amazing Together</em>
+      </h1>
+    </div>
+    <div class="col-md-6">
+      <p class="bottom-cta-paragraph">Looking to build a new web or mobile app, scale your technology, improve your customer’s online shopping experience, integrate with other systems or overcome unique business challenges?</p>
+      <a href="/" class="btn">Let's talk</a>
+    </div>
+  </div>
+</section>
+
 <footer class="footer-global text-md-center text-sm-center">
   <div class="footer-nav container">
     <div class="col-md-4">
