--- a/app/templates/components/footer-global.hbs
+++ b/app/templates/components/footer-global.hbs
@@ -4,7 +4,7 @@
     <h2 class="footer-heading-2">and available for face to face meetings in the city or in CT.</h2>
   </div>
 
-  <div class="footer-home-callto-action container">
+  <div class="footer-home-callto-action container d-flex">
     <div class="col-md-6">
       <h1 class="bottom-cta-title">
         Let's Make Something<br>
@@ -19,7 +19,7 @@
 </section>
 
 <footer class="footer-global text-md-center text-sm-center">
-  <div class="footer-nav container">
+  <div class="footer-nav container d-flex">
     <div class="col-md-4">
       <h3 class="footer-nav-title">Sitemap</h3>
       <ul class="footer-link-list">
