--- a/app/templates/components/header-hero-work.hbs
+++ b/app/templates/components/header-hero-work.hbs
@@ -1,5 +1,5 @@
 <div class="home-hero">
-  <div class="container home-hero-content">
+  <div class="container d-flex home-hero-content">
     <div class="col-md-7 home-intro col-sm-12">
       <h1 class="site-title">Build custom software</h1>
       <h2 class="site-tagline">Our team is passionate about technology, especially when it comes to building software.  With over a decade of experience building customized softwares and the building and training of engineering teams, our service and capabilities make EcmaStack a powerful ally.  We have worked with agencies, startups and corporations alike to help them achieve goals with software.</h2>
