--- a/app/templates/components/home-projects.hbs
+++ b/app/templates/components/home-projects.hbs
@@ -1,4 +1,4 @@
-<section class="home-projects container">
+<section class="home-projects container d-flex">
   <h1 class="section-title text-md-center">Our Recent Projects</h1>
 
   <div class="wrapper-nav">
