--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,5 +1,5 @@
 <div class="page-contact-container">
-  <div class="container">
+  <div class="container d-flex">
   <h2 class="page-title">Fill in the form below and let’s chat</h2>
 
   <form id="contact-form" class="col-md-8 col-sm-12 offset-md-2">
