--- a/app/templates/services.hbs
+++ b/app/templates/services.hbs
@@ -1,5 +1,5 @@
 <div class="home-hero services-hero">
-  <div class="container home-hero-content">
+  <div class="container d-flex home-hero-content">
     <div class="col-md-7 home-intro col-sm-12">
       <h1 class="site-title">Building apps, it’s what we do</h1>
       <h2 class="site-tagline">We use the latest in technology trends and language to build wicked fast, responsive and unique applications.</h2>
@@ -16,7 +16,7 @@
   </div>
 </div>
 
-<section class="home-section container home-our-process">
+<section class="home-section container d-flex home-our-process">
   <h2 class="section-title text-md-center">Software and App Development Services</h2>
 
   <article class="process-block right-bubble row">
