--- a/app/templates/components/header-global.hbs
+++ b/app/templates/components/header-global.hbs
@@ -1,5 +1,5 @@
 <header class="header {{route}}-page-header">
-  <div class="container">
+  <div class="container d-flex">
     <div class="col-md-2 logo">
       {{#link-to "index"}}<img src="/images/logo.svg" alt="logo" />{{/link-to}}
     </div>
