--- a/app/templates/components/header-hero-home.hbs
+++ b/app/templates/components/header-hero-home.hbs
@@ -1,5 +1,5 @@
 <div class="home-hero">
-  <div class="container home-hero-content">
+  <div class="container d-flex home-hero-content">
     <div class="col-md-7 home-intro col-sm-12">
       <h1 class="site-title">We help startups launch beautiful, functional MVPs in minimum time</h1>
       <h2 class="site-tagline">Expert MVP development so you can quickly attract customers and get investors on board</h2>
