--- a/app/templates/components/home-our-process.hbs
+++ b/app/templates/components/home-our-process.hbs
@@ -1,4 +1,4 @@
-<section class="home-section container home-our-process">
+<section class="home-section container d-flex home-our-process">
   <h2 class="section-title text-md-center">What it’s like to work with us</h2>
 
   <article class="process-block right-bubble row">
