--- a/app/templates/components/home-services.hbs
+++ b/app/templates/components/home-services.hbs
@@ -1,5 +1,5 @@
 <section class="home-section home-services">
-  <div class="container">
+  <div class="container d-flex">
     <h2 class="section-title text-md-center">How we can help you</h2>
     <div class="row">
       <div class="col-md-4">
