--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -9,7 +9,7 @@
 </section>
 
 <section class="home-clients">
-  <div class="container">
+  <div class="container d-flex">
     <img class="client-logo" src="images/bizlybw.svg" alt="Bizly" />
     <img class="client-logo" src="images/sloohbw.svg" alt="Slooh" />
     <img class="client-logo" src="images/giffybw.svg" alt="GiftFly" />
@@ -19,7 +19,7 @@
 </section>
 
 <section class="home-mvp">
-  <div class="container">
+  <div class="container d-flex">
     <h1 class="home-mvp-title">At ECMA Stack, we are experts in building <em>MVPs</em> that are <em>fast, beautiful, and efficient.</em></h1>
     <h2 class="home-mvp-subtitle">Are we the right partner for you? Get in touch and let’s find out.</h2>
 
