--- a/app/templates/work.hbs
+++ b/app/templates/work.hbs
@@ -1,4 +1,15 @@
-<section class="home-section container home-our-process">
+<section class="home-clients work-clients">
+  <h2 class="text-md-center">Our Clients</h2>
+  <div class="container d-flex">
+    <img class="client-logo" src="images/bizlybw.svg" alt="Bizly" />
+    <img class="client-logo" src="images/sloohbw.svg" alt="Slooh" />
+    <img class="client-logo" src="images/giffybw.svg" alt="GiftFly" />
+    <img class="client-logo" src="images/classmatebw.svg" alt="classmate" />
+    <img class="client-logo" src="images/minellibw.svg" alt="minelli" />
+  </div>
+</section>
+
+<section class="home-section container d-flex home-our-process">
   <h2 class="section-title text-md-center">Software and App Development Services</h2>
 
   <article class="process-block right-bubble row">
